implements LTI weiterleitung
